<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CompanyDetailsActivity"
    tools:showIn="@layout/activity_company_details">
    <RelativeLayout
        android:id="@+id/stock_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/list_item_background"
        android:clipToPadding="false"
        android:elevation="2dp"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.abhrp.stocksdemo.ui.views.NetworkImageView
            android:id="@+id/company_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/stock_symbol"
            style="@style/semi_bold_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/company_logo"
            android:layout_toRightOf="@id/company_logo"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="APPL" />

        <TextView
            android:id="@+id/low_label"
            style="@style/semi_bold_dark"
            android:layout_below="@id/stock_symbol"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/company_logo"
            android:layout_toRightOf="@id/company_logo"
            android:gravity="bottom"
            android:text="@string/low_label" />

        <TextView
            android:id="@+id/stock_low"
            style="@style/light_text"
            android:layout_below="@id/low_label"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@id/company_logo"
            android:layout_toRightOf="@id/company_logo"
            android:gravity="top"
            tools:text="122" />

        <TextView
            android:id="@+id/high_label"
            style="@style/semi_bold_dark"
            android:layout_below="@id/stock_symbol"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/low_label"
            android:layout_toRightOf="@id/low_label"
            android:gravity="bottom"
            android:text="@string/high_label" />

        <TextView
            android:id="@+id/stock_high"
            style="@style/light_text"
            android:layout_below="@id/high_label"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@id/low_label"
            android:layout_toRightOf="@id/low_label"
            android:gravity="top"
            tools:text="125" />

        <TextView
            android:id="@+id/stock_price"
            style="@style/semi_bold_dark"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            tools:text="737"
            tools:textColor="@color/price_up" />

        <ImageView
            android:id="@+id/stock_trend_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/stock_price"
            android:layout_toStartOf="@id/stock_price"
            app:srcCompat="@drawable/ic_price_up" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/company_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/list_item_background"
        android:clipToPadding="false"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_details_container"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/company_description"
            style="@style/semi_bold_dark"
            android:layout_width="match_parent"
            android:layout_margin="6dp"
            tools:text="Lore isdaksjdskdjhasdkjsahdksjdhas kjdhsak djhsa dkjsahd kasjdhask jdhaskdj dkjsahdk sajdh ksjdh sdkjsh dkasj hksjdhsa kdjhs dkjshd ksjdh ksdj sdkjsds" />

        <TextView
            android:id="@+id/industry_label"
            style="@style/semi_bold_dark"
            android:layout_below="@id/company_description"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/industry_label" />

        <TextView
            android:id="@+id/industry"
            style="@style/semi_bold_dark"
            android:layout_below="@id/company_description"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/industry_label"
            android:layout_toRightOf="@id/industry_label"
            tools:text="Computer Hardware" />

        <TextView
            android:id="@+id/sector_label"
            style="@style/semi_bold_dark"
            android:layout_below="@id/industry_label"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/sector_label" />

        <TextView
            android:id="@+id/sector"
            style="@style/semi_bold_dark"
            android:layout_below="@id/industry"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/sector_label"
            android:layout_toRightOf="@id/sector_label"
            tools:text="Technology" />

        <TextView
            android:id="@+id/ceo_label"
            style="@style/semi_bold_dark"
            android:layout_below="@id/sector_label"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/ceo_label" />

        <TextView
            android:id="@+id/ceo"
            style="@style/semi_bold_dark"
            android:layout_below="@id/sector"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/ceo_label"
            android:layout_toRightOf="@id/ceo"
            tools:text="Tim Cook" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ceo"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textColor="@color/link_color"
            tools:text="http://www.apple.com/" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chart_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/list_item_background"
        android:clipToPadding="false"
        android:elevation="2dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_details_container">

        <com.github.mikephil.charting.charts.CandleStickChart
            android:id="@+id/chart_view"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>